# ReGuilded-Installer

./: .gitignore  .travis.yml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
ReGuildedSetup/: AppDelegate.swift  ContentView.swift  install.sh  remove.sh
ReGuildedSetup.xcodeproj/: project.pbxproj
ReGuildedSetup.xcodeproj/project.xcworkspace/xcuserdata/it.xcuserdatad/: UserInterfaceState.xcuserstate
ReGuildedSetup.xcodeproj/xcuserdata/it.xcuserdatad/xcschemes/: xcschememanagement.plist
ReGuildedSetup/Assets.xcassets/AppIcon.appiconset/: Contents.json
ReGuildedSetup/Assets.xcassets/ReGuilded.imageset/: Contents.json
ReGuildedSetup/Base.lproj/: Main.storyboard
ReGuildedSetupTests/: ReGuildedSetupTests.swift
ReGuildedSetupUITests/: ReGuildedSetupUITests.swift
src/: index.js  main.rs  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/tasks/: install.rs
src-tauri/src/util/: platform_handler.rs
src/app/: index.css  index.html  index.js  setup.js
src/app/actions/: index.js  inject.js  install.js  uninject.js  update.js
src/app/util/: getPlatformModule.js  gitHandler.js  index.js  isInjected.js  platform.js
src/app/util/platformModules/: darwin.js  win32.js
ui/: appwindow.slint  index.html  main.html  preface.html  splashscreen.html
ui/scripts/: globals.js  main.js  preface.js  splashscreen.js
ui/styles/: globals.css  index.css  main.css  preface.css  splashscreen.css
