[package]
authors = ["Nathaniel M. <me@itznxthaniel.dev>", "The ReGuilded Team"]
name = "reguilded-installer"
description = "Your one-stop application to Install/Uninstall, Inject/Uninject, and Update ReGuilded."
version = "1.0.0-alpha"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/ReGuilded/ReGuilded-Installer"
default-run = "reguilded-installer"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^2.0.0-beta", features = ["unstable"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
runas = "1.2.0"
tauri-plugin-fs = "2.0.0-beta.4"
tauri-plugin-dialog = "2.0.0-beta.4"
tauri-cli = "^2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
